tests/src/frontend/visibility/invalid/module_private_alias.sk
module M;

private type T = Int;

module end;

fun f(): M.T {
  0;
}

fun main(): void {
  print_raw("Fail")
}
